cargo-features = ["edition2024", "profile-rustflags"]

[package]
name = "rusted-assault-cube"
version = "1.6.0"
edition = "2024"
authors = ["luadebug Lin Evelynn lin@sz.cn.eu.org"]
publish = false

[dependencies]
windows = { github = "microsoft/windows-rs", version = "0.58.0", features = ["Win32_System_Console", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security", "Win32_System_Memory", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_Graphics", "Win32_Graphics_OpenGL", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Globalization", "Win32_System_ProcessStatus"] }
hudhook = { version = "0.7.1", features = ["opengl3"] }
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
ilhook = "2.1.1"

[lib]
crate-type = ["cdylib"]


[profile.dev]
debug = true

rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[profile.release]
lto = true
opt-level = "z"
debug = true  # Enable debug information for release profile
rustflags = ["-C", "link-arg=-fuse-ld=lld"]