cargo-features = ["edition2024", "profile-rustflags"]

[package]
name = "rusted-assault-cube"
version = "2.3.0"
edition = "2024"
authors = ["luadebug Lin Evelynn lin@sz.cn.eu.org"]
publish = false

[dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Console", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security", "Win32_System_Memory", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_Graphics", "Win32_Graphics_OpenGL", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Globalization", "Win32_System_ProcessStatus"] }
hudhook = { git = "https://github.com/veeenu/hudhook/", features = ["opengl3", "imgui-freetype"] }
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
ilhook = "2.1.1"
serde = { version = "1.0.204", features = ["derive"] }
log = "0.4.22"
anyhow = "1.0.86"
serde_yml = "0.0.11"
gnal_tsur = "0.1.0"
pkg-config = "0.3.30"
imgui-sys = { version = "0.12.0", features = ["use-vcpkg"] }

[lib]
crate-type = ["cdylib"]


[profile.dev]
debug = true
#rustflags = ["-C", "target-feature=+crt-static"]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
#rustflags = ["-C", "link-arg=-fuse-ld=mold"]
[profile.release]
incremental = true
lto = true
opt-level = "s" #z
debug = false
strip = true
#rustflags = ["-C", "target-feature=+crt-static"]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
#rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[target.'cfg(target_os="windows")'.build-dependencies]
vcpkg = "0.2.15"